--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
     <div id="submitButton" class="ptr" onclick="findStudent()">S</div>
   </div>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
-  <p class="note">Use the contact buttons below for help</p>
+  <p class="note" style="margin-top:40px;">Use the contact buttons below for help</p>
   <div class="navigationButtonContainer" style="margin-top:35px;">
     <a href="tel:8645694879"><div class="contactButton">x</div></a>
     <a href="sms:8645694879"><div class="contactButton">d</div></a>
@@ -288,6 +288,13 @@
 
 <div id="resourcesPop" class="pop" style="text-align:left;">
   <p id="studentPin"></p>
+  <p><a target="_blank" href="docs/handbook.pdf">Download class handbook</a></p>
+  <p><a target="_blank" href="docs/calendar.pdf">Download printable calendar</a></p>
+  <p><a target="_blank" href="docs/ranks.pdf">Download printable rank chart</a></p>
+  <p><a target="_blank" href="https://www.facebook.com/groups/ksgrade2">Class Facebook group</a></p>
+  <p><a target="_blank" href="https://www.youtube.com/channel/UClTqYQniBhCuJk-9yhl80_g/playlists">Class YouTube channel</a></p>
+  <p>Text "JOIN" to <a href="sms:8445688420">844-568-8420</a> to receive weekly update links by text</p>
+  <p>Email "JOIN" to <a href="mailto:jonathan@ksgrade2.com">jonathan@ksgrade2.com</a> to receive weekly updates by email</p>
 </div>
 
 </div>
