--- a/students.html
+++ b/students.html
@@ -287,14 +287,16 @@
 </div>
 
 <div id="resourcesPop" class="pop" style="text-align:left;">
-  <p id="studentPin"></p>
+  <p id="studentPin" style="margin-top:5px"></p>
   <p><a target="_blank" href="docs/handbook.pdf">Download class handbook</a></p>
   <p><a target="_blank" href="docs/calendar.pdf">Download printable calendar</a></p>
   <p><a target="_blank" href="docs/ranks.pdf">Download printable rank chart</a></p>
-  <p><a target="_blank" href="https://www.facebook.com/groups/ksgrade2">Class Facebook group</a></p>
-  <p><a target="_blank" href="https://www.youtube.com/channel/UClTqYQniBhCuJk-9yhl80_g/playlists">Class YouTube channel</a></p>
-  <p>Text "JOIN" to <a href="sms:8445688420">844-568-8420</a> to receive weekly update links by text</p>
-  <p>Email "JOIN" to <a href="mailto:jonathan@ksgrade2.com">jonathan@ksgrade2.com</a> to receive weekly updates by email</p>
+  <p>Text "JOIN" to <a href="sms:8445688420?&body=JOIN">844-568-8420</a> to receive weekly update links by text</p>
+  <p>Email "JOIN" to <a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">jonathan@ksgrade2.com</a> to receive weekly updates by email</p>
+  <div id="socialMediaFlexDiv" style="border-top:1px solid #555;padding-top:5px;margin-top:40px">
+    <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div id="fbLink" class="ptr"></div></a>
+    <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div id="ytLink" class="ptr"></div></a>
+  </div>
 </div>
 
 </div>
